--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1674,7 +1674,7 @@ a {
 .cid-uxLiUOMETx {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #000000;
+  background-image: url("../../../assets/images/mbr-1470x1920.webp");
 }
 .cid-uxLiUOMETx .mbr-text {
   color: #000000;
@@ -1808,4 +1808,702 @@ a {
 }
 .cid-uxLiN14tmW .card-title {
   color: #ffffff;
+}
+.cid-uxLOwg8pMs {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-image: url("../../../assets/images/mbr-1920x1280.webp");
+  overflow: hidden;
+}
+.cid-uxLfxGjcIZ {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+}
+.cid-uxLfxGjcIZ .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+@media (max-width: 767px) {
+  .cid-uxLfxGjcIZ .navbar-toggler {
+    transform: scale(0.8);
+  }
+}
+.cid-uxLfxGjcIZ .navbar-brand {
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-uxLfxGjcIZ .navbar-brand img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 0px !important;
+}
+.cid-uxLfxGjcIZ .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-uxLfxGjcIZ .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-uxLfxGjcIZ .navbar-nav {
+  margin: auto;
+  margin-left: 0;
+  margin-left: auto;
+}
+.cid-uxLfxGjcIZ .navbar-nav .nav-item {
+  padding: 0 !important;
+  transition: .3s all !important;
+}
+.cid-uxLfxGjcIZ .navbar-nav .nav-item .nav-link {
+  padding: 16px !important;
+  margin: 0 !important;
+  border-radius: 1rem !important;
+  transition: .3s all !important;
+}
+.cid-uxLfxGjcIZ .navbar-nav .nav-item .nav-link:hover {
+  background-color: rgba(27, 31, 10, 0.06);
+}
+.cid-uxLfxGjcIZ .navbar-nav .open .nav-link::after {
+  transform: rotate(180deg);
+}
+@media (min-width: 992px) {
+  .cid-uxLfxGjcIZ .navbar-nav .open .nav-link::before {
+    content: "";
+    width: 100%;
+    height: 20px;
+    top: 100%;
+    background: transparent;
+    position: absolute;
+  }
+}
+.cid-uxLfxGjcIZ .navbar-nav .dropdown-item {
+  padding: 12px !important;
+  border-radius: 0.5rem !important;
+  margin: 0 8px !important;
+  transition: .3s all !important;
+}
+.cid-uxLfxGjcIZ .navbar-nav .dropdown-item:hover {
+  background-color: rgba(27, 31, 10, 0.06);
+}
+@media (min-width: 992px) {
+  .cid-uxLfxGjcIZ .navbar-nav {
+    padding-left: 1.5rem;
+  }
+}
+.cid-uxLfxGjcIZ .nav-link {
+  width: fit-content;
+  position: relative;
+}
+.cid-uxLfxGjcIZ .navbar-logo {
+  padding-left: 2rem;
+  margin: 0 !important;
+}
+@media (max-width: 767px) {
+  .cid-uxLfxGjcIZ .navbar-logo {
+    padding-left: 1rem;
+  }
+}
+.cid-uxLfxGjcIZ .navbar-caption {
+  padding-left: 1rem;
+  padding-right: .5rem;
+}
+@media (max-width: 767px) {
+  .cid-uxLfxGjcIZ .nav-dropdown {
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-uxLfxGjcIZ .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  transition: .3s all;
+}
+.cid-uxLfxGjcIZ .container {
+  display: flex;
+  height: 90px;
+  padding: 0.5rem 0.6rem;
+  flex-wrap: nowrap;
+  background: #000000 !important;
+  left: 0;
+  right: 0;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 100vw;
+  margin-top: 1rem;
+  background-color: #000000;
+  box-shadow: 0 30px 60px 0 rgba(27, 31, 10, 0.08);
+}
+@media (max-width: 992px) {
+  .cid-uxLfxGjcIZ .container {
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uxLfxGjcIZ .container {
+    width: 95%;
+    height: 56px !important;
+    padding-right: 1rem;
+    margin-top: 0rem;
+  }
+}
+.cid-uxLfxGjcIZ .iconfont-wrapper {
+  color: #ffffff !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-uxLfxGjcIZ .dropdown-menu {
+  flex-wrap: wrap;
+  flex-direction: column;
+  max-width: 100%;
+  padding: 12px 4px !important;
+  border-radius: 1.5rem;
+  transition: .3s all !important;
+  min-width: auto;
+  background: #000000;
+  background: #000000 !important;
+}
+.cid-uxLfxGjcIZ .nav-item:focus,
+.cid-uxLfxGjcIZ .nav-link:focus {
+  outline: none;
+}
+.cid-uxLfxGjcIZ .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-uxLfxGjcIZ .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-uxLfxGjcIZ .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-uxLfxGjcIZ .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-uxLfxGjcIZ .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-uxLfxGjcIZ .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-uxLfxGjcIZ .navbar {
+  min-height: 90px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  background: transparent !important;
+  padding: 0 !important;
+  border: none !important;
+  box-shadow: none !important;
+  border-radius: 0 !important;
+}
+.cid-uxLfxGjcIZ .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-uxLfxGjcIZ .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-uxLfxGjcIZ .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-uxLfxGjcIZ .navbar .navbar-collapse {
+  z-index: 1;
+  justify-content: flex-end;
+}
+.cid-uxLfxGjcIZ .navbar.collapsed {
+  justify-content: center;
+}
+.cid-uxLfxGjcIZ .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-uxLfxGjcIZ .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-uxLfxGjcIZ .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-uxLfxGjcIZ .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-uxLfxGjcIZ .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-uxLfxGjcIZ .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-uxLfxGjcIZ .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-uxLfxGjcIZ .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-uxLfxGjcIZ .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 767px) {
+  .cid-uxLfxGjcIZ .navbar {
+    min-height: 72px;
+  }
+  .cid-uxLfxGjcIZ .navbar .navbar-logo img {
+    height: 2rem !important;
+  }
+}
+@media (max-width: 991px) {
+  .cid-uxLfxGjcIZ .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-uxLfxGjcIZ .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-uxLfxGjcIZ .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 10px;
+  }
+  .cid-uxLfxGjcIZ .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-uxLfxGjcIZ .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-uxLfxGjcIZ .navbar.navbar-short .navbar-logo img {
+  height: 2rem;
+}
+.cid-uxLfxGjcIZ .dropdown-item.active,
+.cid-uxLfxGjcIZ .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-uxLfxGjcIZ .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-uxLfxGjcIZ .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-uxLfxGjcIZ .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-uxLfxGjcIZ .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #000000;
+}
+.cid-uxLfxGjcIZ .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 105%;
+  transform: none;
+  top: -12px;
+}
+.cid-uxLfxGjcIZ .navbar .dropdown.open > .dropdown-menu {
+  display: flex;
+}
+.cid-uxLfxGjcIZ ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-uxLfxGjcIZ .navbar-buttons {
+  text-align: center;
+  min-width: 140px;
+}
+@media (max-width: 992px) {
+  .cid-uxLfxGjcIZ .navbar-buttons {
+    text-align: left;
+  }
+}
+.cid-uxLfxGjcIZ button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-uxLfxGjcIZ button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-uxLfxGjcIZ button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-uxLfxGjcIZ button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-uxLfxGjcIZ button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-uxLfxGjcIZ button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-uxLfxGjcIZ nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-uxLfxGjcIZ nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-uxLfxGjcIZ nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-uxLfxGjcIZ nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-uxLfxGjcIZ .navbar-dropdown {
+  padding: 0 1rem;
+}
+.cid-uxLfxGjcIZ a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-uxLfxGjcIZ .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media (max-width: 992px) {
+  .cid-uxLfxGjcIZ .icons-menu {
+    justify-content: flex-start;
+    margin-bottom: .5rem;
+  }
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-uxLfxGjcIZ .navbar {
+    height: 70px;
+  }
+  .cid-uxLfxGjcIZ .navbar.opened {
+    height: auto;
+  }
+  .cid-uxLfxGjcIZ .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu {
+  display: none;
+  width: max-content;
+  max-width: 500px !important;
+  transform: translateX(-50%);
+  top: calc(100% + 20px);
+  left: 50%;
+}
+.cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown-item {
+  line-height: 1 !important;
+}
+.cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown .dropdown-item {
+  align-items: center;
+  display: flex;
+  height: max-content !important;
+  min-height: max-content !important;
+}
+.cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown .dropdown-item::after {
+  display: inline-block;
+  position: static;
+  margin-left: 0.5rem;
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  transition: .3s all;
+  transform: rotate(-90deg);
+}
+.cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown.open .dropdown-item::after {
+  transform: rotate(0deg);
+}
+.cid-uxLfxGjcIZ .mbr-section-btn {
+  margin: -0.6rem -0.6rem;
+}
+.cid-uxLfxGjcIZ .navbar-toggler {
+  margin-left: 12px;
+  margin-right: 8px;
+  order: 1000;
+}
+@media (max-width: 991px) {
+  .cid-uxLfxGjcIZ .navbar-brand {
+    margin-right: auto;
+  }
+  .cid-uxLfxGjcIZ .navbar-collapse {
+    z-index: -1 !important;
+    position: absolute;
+    top: 110%;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
+    border-radius: 1.5rem;
+    background: #000000;
+    opacity: 1;
+    border-color: #000000 !important;
+    background: #000000 !important;
+    backdrop-filter: blur(8px);
+  }
+  .cid-uxLfxGjcIZ .navbar-nav .nav-item .nav-link::after {
+    margin-left: 10px;
+  }
+  .cid-uxLfxGjcIZ .navbar-nav .dropdown-item:hover {
+    background-color: rgba(27, 31, 10, 0.06);
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu {
+    max-width: 100% !important;
+    transform: translateX(0);
+    top: 10px;
+    left: 0;
+    padding: 8px !important;
+    border-radius: 1rem;
+    background-color: rgba(27, 31, 10, 0.04) !important;
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown-item {
+    padding: 8px !important;
+    line-height: 1 !important;
+    margin-bottom: 4px !important;
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown .dropdown-item {
+    align-items: center;
+    display: flex;
+    height: max-content !important;
+    min-height: max-content !important;
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown .dropdown-item::after {
+    display: inline-block;
+    position: static;
+    margin-left: 0.5rem;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 0;
+    transition: .3s all;
+    transform: rotate(0deg);
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown.open .dropdown-item::after {
+    transform: rotate(180deg);
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown > .dropdown-menu .dropdown-submenu {
+    position: static;
+    width: 100%;
+    max-width: 100% !important;
+    transform: translateX(0) !important;
+    top: 0;
+    left: 0;
+    padding: 8px !important;
+    border-radius: 1rem;
+    background-color: rgba(27, 31, 10, 0.04) !important;
+  }
+  .cid-uxLfxGjcIZ .navbar .dropdown.open > .dropdown-menu {
+    display: flex !important;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+@media (max-width: 575px) {
+  .cid-uxLfxGjcIZ .navbar-collapse {
+    padding: 1rem;
+  }
+}
+.cid-uxLO20hkvz {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #260a30;
+}
+.cid-uxLO20hkvz input {
+  padding: 1.2rem 1.5rem;
+  border: none !important;
+  height: 100%;
+}
+.cid-uxLO20hkvz input:hover {
+  border: none !important;
+}
+.cid-uxLO20hkvz .btn {
+  height: 100%;
+  margin: auto;
+}
+@media (min-width: 768px) {
+  .cid-uxLO20hkvz .btn {
+    margin-left: 0.625rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-uxLO20hkvz .text-wrapper {
+    padding: 0 2rem;
+  }
+}
+.cid-uxLO20hkvz .row {
+  justify-content: center;
+}
+.cid-uxLO20hkvz .mbr-section-btn {
+  display: flex;
+  margin-bottom: 1.2rem;
+  width: fit-content;
+}
+.cid-uxLO20hkvz .mbr-section-btn .btn {
+  width: auto;
+}
+@media (max-width: 991px) {
+  .cid-uxLO20hkvz .image-wrapper {
+    margin-bottom: 2rem;
+  }
+  .cid-uxLO20hkvz .content-wrapper {
+    flex-direction: column-reverse;
+  }
+}
+.cid-uxLO20hkvz .justify-content-center {
+  align-items: center;
+}
+.cid-uxLO20hkvz .mbr-section-title {
+  text-align: center;
+  color: #ffd7ef;
+}
+.cid-uxLOpvSZHI {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #260a30;
+}
+.cid-uxLOpvSZHI input {
+  padding: 1.2rem 1.5rem;
+  border: none !important;
+  height: 100%;
+}
+.cid-uxLOpvSZHI input:hover {
+  border: none !important;
+}
+.cid-uxLOpvSZHI .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uxLOpvSZHI .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uxLOpvSZHI .number-wrap {
+  color: #ffd7ef;
+  text-align: center;
+}
+.cid-uxLOpvSZHI .number {
+  color: #ffd7ef;
+  white-space: nowrap;
+}
+.cid-uxLOpvSZHI .row {
+  justify-content: center;
+}
+.cid-uxLOpvSZHI .period {
+  display: block;
+}
+.cid-uxLOpvSZHI .dot {
+  display: none;
+}
+@media (max-width: 767px) {
+  .cid-uxLOpvSZHI .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-uxLOpvSZHI .btn {
+  height: 100%;
+  margin: auto;
+}
+@media (min-width: 768px) {
+  .cid-uxLOpvSZHI .btn {
+    margin-left: 0.625rem;
+  }
+}
+.cid-uxLOpvSZHI .mbr-section-btn {
+  display: flex;
+  margin-bottom: 1.2rem;
+  width: fit-content;
+}
+.cid-uxLOpvSZHI .mbr-section-btn .btn {
+  width: auto;
+}
+.cid-uxLOpvSZHI .justify-content-center {
+  align-items: center;
+}
+.cid-uxLOpvSZHI .mbr-section-title {
+  color: #ffd7ef;
+}
+.cid-uxLOpvSZHI .mbr-section-subtitle,
+.cid-uxLOpvSZHI .mbr-text {
+  color: #ffffff;
+}
+.cid-uxLOwg8pMs {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-image: url("../../../assets/images/mbr-1920x1280.webp");
+  overflow: hidden;
 }
