create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1393,7 +1393,6 @@ a {
   display: flex;
   padding-top: 20rem;
   padding-bottom: 4rem;
-  background-color: #260a30;
 }
 @media (min-width: 768px) {
   .cid-uxLhI6IlQ3 {
@@ -1435,6 +1434,7 @@ a {
   height: 100%;
   position: absolute;
   top: 0;
+  background-image: url("../../../assets/images/background1.webp");
 }
 .cid-uxLhI6IlQ3 .mbr-section-title,
 .cid-uxLhI6IlQ3 .mbr-section-subtitle {
