create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1855,7 +1855,7 @@ a {
 .cid-uxLOwg8pMs {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-image: url("../../../assets/images/mbr-1920x1280.webp");
+  background-color: #000000;
   overflow: hidden;
 }
 .cid-uxLfxGjcIZ {
