--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1149,58 +1149,6 @@ a {
 .cid-uyvhFbzdDk .floatright {
   margin-right: auto !important;
 }
-.cid-uxVsn9ks80 {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background: linear-gradient(0deg, #000000, #000000);
-}
-.cid-uxVsn9ks80 .pulsingButton {
-  position: relative;
-  width: 150px;
-  height: 150px;
-  border: none;
-  box-shadow: 0 0 0 0 #ff2100;
-  border-radius: 50%;
-  background-color: #ffffff;
-  background-image: url("../../../assets/images/captura-de-tela-1-1-1-removebg-preview-1-563x443.png");
-  background-size: 60%, cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-  -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-  -ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-  animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-}
-@-webkit-keyframes pulse {
-  to {
-    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
-  }
-}
-@-moz-keyframes pulse {
-  to {
-    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
-  }
-}
-@-ms-keyframes pulse {
-  to {
-    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
-  }
-}
-@keyframes pulse {
-  to {
-    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
-  }
-}
-.cid-uxVs2iyZZy {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #000000;
-}
-.cid-uxVs2iyZZy .mbr-section {
-  text-align: center;
-  color: #fff;
-}
 .cid-uxLhI6IlQ3 {
   display: flex;
   padding-top: 20rem;
@@ -1259,6 +1207,49 @@ a {
 }
 .cid-uxLhI6IlQ3 .mbr-section-title {
   color: #ffffff;
+}
+.cid-uxVsn9ks80 {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background: linear-gradient(0deg, #000000, #000000);
+}
+.cid-uxVsn9ks80 .pulsingButton {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border: none;
+  box-shadow: 0 0 0 0 #ff2100;
+  border-radius: 50%;
+  background-color: #ffffff;
+  background-image: url("../../../assets/images/captura-de-tela-1-1-1-removebg-preview-1-563x443.png");
+  background-size: 60%, cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+}
+@-webkit-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
+  }
+}
+@-moz-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
+  }
+}
+@-ms-keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
+  }
+}
+@keyframes pulse {
+  to {
+    box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
+  }
 }
 .cid-uxLi7mvuNG {
   padding-top: 6rem;
@@ -1669,6 +1660,15 @@ a {
   padding-bottom: 2rem;
   background-color: #000000;
   overflow: hidden;
+}
+.cid-uxVs2iyZZy {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-uxVs2iyZZy .mbr-section {
+  text-align: center;
+  color: #fff;
 }
 .cid-uxLOpvSZHI {
   padding-top: 6rem;
@@ -2120,4 +2120,390 @@ a {
 }
 .cid-uyvhFbzdDk .floatright {
   margin-right: auto !important;
+}
+.cid-uyvhFbzdDk {
+  z-index: 1000;
+  width: 100%;
+  position: relative;
+  min-height: 60px;
+}
+.cid-uyvhFbzdDk nav.navbar {
+  position: fixed;
+}
+.cid-uyvhFbzdDk .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-uyvhFbzdDk .dropdown-menu {
+  min-width: 270px;
+  max-width: 500px;
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-uyvhFbzdDk .dropdown-item {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.cid-uyvhFbzdDk .dropdown-item:hover,
+.cid-uyvhFbzdDk .dropdown-item:focus {
+  background: #e6c63b !important;
+  color: #4479d9 !important;
+}
+.cid-uyvhFbzdDk .dropdown-item:hover span {
+  color: #4479d9;
+}
+.cid-uyvhFbzdDk .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-uyvhFbzdDk .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-uyvhFbzdDk .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-uyvhFbzdDk .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-uyvhFbzdDk .nav-link {
+  position: relative;
+}
+.cid-uyvhFbzdDk .container {
+  display: flex;
+  margin: auto;
+}
+@media (min-width: 992px) {
+  .cid-uyvhFbzdDk .container {
+    flex-wrap: nowrap;
+  }
+}
+.cid-uyvhFbzdDk .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-uyvhFbzdDk .dropdown-menu,
+.cid-uyvhFbzdDk .navbar.opened {
+  background: #100f10 !important;
+}
+.cid-uyvhFbzdDk .nav-item:focus,
+.cid-uyvhFbzdDk .nav-link:focus {
+  outline: none;
+}
+.cid-uyvhFbzdDk .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-uyvhFbzdDk .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-uyvhFbzdDk .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-uyvhFbzdDk .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-uyvhFbzdDk .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-uyvhFbzdDk .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-uyvhFbzdDk .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  background: #100f10;
+}
+.cid-uyvhFbzdDk .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-uyvhFbzdDk .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-uyvhFbzdDk .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-uyvhFbzdDk .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-uyvhFbzdDk .navbar.collapsed {
+  justify-content: center;
+}
+.cid-uyvhFbzdDk .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-uyvhFbzdDk .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-uyvhFbzdDk .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3rem);
+  }
+}
+.cid-uyvhFbzdDk .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-uyvhFbzdDk .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-uyvhFbzdDk .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-uyvhFbzdDk .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-uyvhFbzdDk .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-uyvhFbzdDk .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-uyvhFbzdDk .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-uyvhFbzdDk .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-uyvhFbzdDk .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-uyvhFbzdDk .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-uyvhFbzdDk .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-uyvhFbzdDk .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-uyvhFbzdDk .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-uyvhFbzdDk .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-uyvhFbzdDk .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-uyvhFbzdDk .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-uyvhFbzdDk .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-uyvhFbzdDk .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-uyvhFbzdDk .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-uyvhFbzdDk .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-uyvhFbzdDk .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 10px 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-uyvhFbzdDk .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-uyvhFbzdDk .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-uyvhFbzdDk .dropdown-item.active,
+.cid-uyvhFbzdDk .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-uyvhFbzdDk .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-uyvhFbzdDk .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-uyvhFbzdDk .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-uyvhFbzdDk .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #100f10;
+}
+.cid-uyvhFbzdDk .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-uyvhFbzdDk .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-uyvhFbzdDk ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-uyvhFbzdDk .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-uyvhFbzdDk button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-uyvhFbzdDk button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #fff0b0;
+}
+.cid-uyvhFbzdDk button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-uyvhFbzdDk button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-uyvhFbzdDk button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-uyvhFbzdDk button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-uyvhFbzdDk nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-uyvhFbzdDk nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-uyvhFbzdDk nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-uyvhFbzdDk nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-uyvhFbzdDk .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-uyvhFbzdDk a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-uyvhFbzdDk .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-uyvhFbzdDk .navbar {
+    height: 70px;
+  }
+  .cid-uyvhFbzdDk .navbar.opened {
+    height: auto;
+  }
+  .cid-uyvhFbzdDk .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-uyvhFbzdDk .floatleft {
+  margin-left: auto !important;
+}
+.cid-uyvhFbzdDk .floatright {
+  margin-right: auto !important;
+}
+.cid-uztlbwvWBn {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-uztlbwvWBn .mbr-section {
+  text-align: center;
+  color: #fff;
+}
+.cid-uxLOwg8pMs {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #000000;
+  overflow: hidden;
 }
